# baxter_common_ros2

./: .gitignore  CHANGELOG.rst  README.rst
baxter_bridge/: CMakeLists.txt  README.md  package.xml
baxter_bridge/config/: baxter.yaml  gen_factory.py
baxter_bridge/factory/: baxter.yaml  baxter_scan.py  gen_factory.py
baxter_bridge/include/baxter_bridge/: BaxterPublisher.h  BaxterPublishers.h  BaxterPublishersRequest.h  BaxterPublishersResponse.h  bridge.h  bridge_1to2.h  bridge_2to1.h  conversions.h  factory.h  monitor.h  solve_ik.h  topic_poller.h
baxter_bridge/include/ros1_msgs/baxter_core_msgs/: AnalogIOState.h  AnalogIOStates.h  AnalogOutputCommand.h  AssemblyState.h  AssemblyStates.h  CameraControl.h  CameraSettings.h  CloseCameraRequest.h  CloseCameraResponse.h  CollisionAvoidanceState.h  CollisionDetectionState.h  DigitalIOState.h  DigitalIOStates.h  DigitalOutputCommand.h  EndEffectorCommand.h  EndEffectorProperties.h  EndEffectorState.h  EndpointState.h  EndpointStates.h  HeadPanCommand.h  HeadState.h  JointCommand.h  ListCamerasRequest.h  ListCamerasResponse.h  NavigatorState.h  NavigatorStates.h  OpenCameraRequest.h  OpenCameraResponse.h  RobustControllerStatus.h  SEAJointState.h  SolvePositionIKRequest.h  SolvePositionIKResponse.h  URDFConfiguration.h
baxter_bridge/include/ros1_msgs/baxter_maintenance_msgs/: CalibrateArmData.h  CalibrateArmEnable.h  TareData.h  TareEnable.h  UpdateSource.h  UpdateSources.h  UpdateStatus.h
baxter_bridge/launch/: baxter_bridge_launch.py
baxter_bridge/ros1_msgs/baxter_core_msgs/: AnalogIOState.h  AnalogIOStates.h  AnalogOutputCommand.h  AssemblyState.h  AssemblyStates.h  BridgePublisher.h  BridgePublishersAuth.h  BridgePublishersAuthRequest.h  BridgePublishersAuthResponse.h  BridgePublishersForce.h  BridgePublishersForceRequest.h  BridgePublishersForceResponse.h  CameraControl.h  CameraSettings.h  CloseCameraRequest.h  CloseCameraResponse.h  CollisionAvoidanceState.h  CollisionDetectionState.h  DigitalIOState.h  DigitalIOStates.h  DigitalOutputCommand.h  EndEffectorCommand.h  EndEffectorProperties.h  EndEffectorState.h  EndpointState.h  EndpointStates.h  HeadPanCommand.h  HeadState.h  JointCommand.h  ListCamerasRequest.h  ListCamerasResponse.h  NavigatorState.h  NavigatorStates.h  OpenCameraRequest.h  OpenCameraResponse.h  RobustControllerStatus.h  SEAJointState.h  SolvePositionIKRequest.h  SolvePositionIKResponse.h  URDFConfiguration.h
baxter_bridge/ros1_msgs/baxter_interface/: GripperActionServerConfig.h  HeadActionServerConfig.h  PositionFFJointTrajectoryActionServerConfig.h  PositionJointTrajectoryActionServerConfig.h  VelocityJointTrajectoryActionServerConfig.h
baxter_bridge/ros1_msgs/baxter_maintenance_msgs/: CalibrateArmData.h  CalibrateArmEnable.h  TareData.h  TareEnable.h  UpdateSource.h  UpdateSources.h  UpdateStatus.h
baxter_bridge/ros1_msgs/control_msgs/: FollowJointTrajectoryAction.h  FollowJointTrajectoryActionFeedback.h  FollowJointTrajectoryActionGoal.h  FollowJointTrajectoryActionResult.h  FollowJointTrajectoryFeedback.h  FollowJointTrajectoryGoal.h  FollowJointTrajectoryResult.h  GripperCommand.h  GripperCommandAction.h  GripperCommandActionFeedback.h  GripperCommandActionGoal.h  GripperCommandActionResult.h  GripperCommandFeedback.h  GripperCommandGoal.h  GripperCommandResult.h  JointControllerState.h  JointJog.h  JointTolerance.h  JointTrajectoryAction.h  JointTrajectoryActionFeedback.h  JointTrajectoryActionGoal.h  JointTrajectoryActionResult.h  JointTrajectoryControllerState.h  JointTrajectoryFeedback.h  JointTrajectoryGoal.h  JointTrajectoryResult.h  PidState.h  PointHeadAction.h  PointHeadActionFeedback.h  PointHeadActionGoal.h  PointHeadActionResult.h  PointHeadFeedback.h  PointHeadGoal.h  PointHeadResult.h  QueryCalibrationState.h  QueryCalibrationStateRequest.h  QueryCalibrationStateResponse.h  QueryTrajectoryState.h  QueryTrajectoryStateRequest.h  QueryTrajectoryStateResponse.h  (+7 more)
baxter_bridge/src/: baxter_bridge.cpp  bridge.cpp  factory.cpp  factory_1to2.cpp  factory_1to2.cpp_bak  factory_2to1.cpp  factory_2to1.cpp_bak  monitor.cpp  topic_poller.cpp
baxter_bridge/srv/: Exists.srv  Open.srv
baxter_core_msgs/: CMakeLists.txt  mapping_rules.yaml  package.xml
baxter_core_msgs/msg/: AnalogIOState.msg  AnalogIOStates.msg  AnalogOutputCommand.msg  AssemblyState.msg  AssemblyStates.msg  BridgePublisher.msg  CameraControl.msg  CameraSettings.msg  CollisionAvoidanceState.msg  CollisionDetectionState.msg  DigitalIOState.msg  DigitalIOStates.msg  DigitalOutputCommand.msg  EndEffectorCommand.msg  EndEffectorProperties.msg  EndEffectorState.msg  EndpointState.msg  EndpointStates.msg  HeadPanCommand.msg  HeadState.msg  JointCommand.msg  NavigatorState.msg  NavigatorStates.msg  RobustControllerStatus.msg  SEAJointState.msg  URDFConfiguration.msg
baxter_core_msgs/srv/: BridgePublishersAuth.srv  BridgePublishersForce.srv  CloseCamera.srv  ListCameras.srv  OpenCamera.srv  SolvePositionIK.srv
baxter_description/: CMakeLists.txt  package.xml
baxter_description/launch/: baxter_state_publisher_launch.py  config.rviz  rviz_launch.py
baxter_description/urdf/: baxter.urdf  baxter.urdf.xacro  gazebosim.urdf.xacro
baxter_description/urdf/baxter_base/: baxter_base.urdf.xacro
baxter_description/urdf/pedestal/: pedestal.xacro
baxter_maintenance_msgs/: CMakeLists.txt  mapping_rules.yaml  package.xml
baxter_maintenance_msgs/msg/: CalibrateArmData.msg  CalibrateArmEnable.msg  TareData.msg  TareEnable.msg  UpdateSource.msg  UpdateSources.msg  UpdateStatus.msg
rethink_ee_description/: CMakeLists.txt  package.xml
rethink_ee_description/urdf/electric_gripper/: rethink_electric_gripper.xacro
rethink_ee_description/urdf/electric_gripper/fingers/: basic_hard_tip.xacro  basic_soft_tip.xacro  extended_narrow.xacro  extended_wide.xacro  half_round_tip.xacro  paddle_tip.xacro  standard_narrow.xacro  standard_wide.xacro
rethink_ee_description/urdf/null_gripper/: null_gripper.xacro
rethink_ee_description/urdf/pneumatic_gripper/: pneumatic_gripper_base.xacro  rethink_pneumatic_gripper.xacro
