<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>baxter_bridge</name>
  <version>1.0.0</version>
  <description>
    Custom ROS 1/2 bridge for Baxter robot
  </description>

  <maintainer email="olivier.kermorgant@ec-nantes.fr">Olivier Kermorgant</maintainer>
  <license>BSD</license>
  <url type="repository">
    https://github.com/CentraleNantesRobotics/baxter_common_ros2
  </url>
  <author>Olivier Kermorgant</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>baxter_core_msgs</depend>
  <depend>baxter_maintenance_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>robot_state_publisher</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
