<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>baxter_description</name>
  <version>2.0.0</version>
  <description>
    Description of Baxter Research Robot from Rethink Robotics for ROS 2.
    This package contains the URDF and meshes describing Baxter.
  </description>

  <maintainer email="olivier.kermorgant@ec-nantes.fr">Olivier Kermorgant</maintainer>
  <license>BSD</license>
  <url type="website">http://sdk.rethinkrobotics.com</url>
  <url type="repository">
    https://github.com/CentraleNantesRobotics/baxter_common_ros2
  </url>
  <url type="bugtracker">
    https://github.com/CentraleNantesRobotics/baxter_common_ros2/issues
  </url>
  <author>Rethink Robotics Inc.</author>
  <author>Olivier Kermorgant</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>urdf</depend>

  <exec_depend>rethink_ee_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
